--- a/Ghousia/stylesheet1.css
+++ b/Ghousia/stylesheet1.css
@@ -1,5 +1,5 @@
 h1 {
-  color: blue;
+  color: black;
 }
 
 h3 {
@@ -7,10 +7,34 @@ h3 {
 }
 
 p {
-  background-color: black;
+  
   color: white;
+  
+}
+
+.about {
+	float: left;
+	width: 240px;
+	height: 300px;
+	margin-left: 20px;
+	padding: 15px;
+	background-color: grey;
+	font: italic 15px Georgia, sans-serif;
+}
+
+.started {
+	height: 280px;
+	width: 650px;
+	margin-left: 300px;
+	padding: 24px 20px;
+	background-color: brown;
+	font: italic 15px Georgia, sans-serif;
+}
+
+li {
+    display: inline;
 }
 
 body {
-  background-color: skyblue;
+  background-color: pink;
 }
